--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,4 +10,5 @@
   justify-content: center;
   align-items: center;
   background-color: black;
+  font-family: "Comfortaa", sans-serif;
 }
