--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,15 @@
 @tailwind utilities;
 
 #root {
+  /* important for proper view in mobile browsers */
+  /* width: 100svw;
+  height: 100svh; */
   height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: white;
   font-family: "Comfortaa", sans-serif;
 }
 
@@ -36,4 +39,13 @@
 }
 .accordion-content-open {
   max-height: 200px;
+}
+
+/* MOBILE MENU SCROLLBAR */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
