Replace react-slick with Swiper for ProductSlider, add async product fetching via Redux Thunk, and improve layout on ProductDetail and Store pages

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 
 /* CUSTOM STYLE GROUPS */
 .c-home-slider-sections {
-  @apply flex flex-col gap-[4vw] mt-[12vw];
+  @apply w-full flex flex-col gap-[4vw] mt-[12vw];
 }
 .c-h2 {
   @apply w-full text-[6vw] pl-[5vw];
