improve mobile menu styling

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   align-items: center;
   background-color: white;
   font-family: "Comfortaa", sans-serif;
+  padding-top: 17vw; /* the height of the header */
 }
 
 /* CUSTOM STYLE GROUPS */
