--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,7 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+.text-shadow-black {
+  text-shadow: 0px 0px 3px black, 0 0px 3px black, 0 0 3px black, 0 0 3px black;
+}
