--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 
 /* SWIPER  */
 .swiper {
-  @apply w-[90%] h-[65vw];
+  @apply w-[90%] h-slider;
 }
 .swiper-button-prev::after,
 .swiper-button-next::after {
