update warning screen

--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,11 @@
 .text-shadow-black {
   text-shadow: 0px 0px 3px black, 0 0px 3px black, 0 0 3px black, 0 0 3px black;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  scrollbar-width: none;
+}
